// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReasonSection renders the section with two input 1`] = `
<div
  class="MuiBox-root MuiBox-root-4"
>
  <div
    class="MuiBox-root MuiBox-root-5"
  >
    <h4
      class="MuiTypography-root MuiTypography-h6"
    >
      持有逻辑(至少3条)
    </h4>
    <div
      class="MuiBox-root MuiBox-root-6"
    >
      <div>
        ListControl
      </div>
    </div>
  </div>
  <ul
    class="MuiList-root MuiList-padding"
  >
    <li
      class="MuiListItem-root MuiListItem-dense"
    >
      <div>
        input 1
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-dense"
    >
      <div>
        input 2
      </div>
    </li>
  </ul>
</div>
`;

exports[`ReasonSection renders the section with two input and remove icon 1`] = `
<div
  class="MuiBox-root MuiBox-root-8"
>
  <div
    class="MuiBox-root MuiBox-root-9"
  >
    <h4
      class="MuiTypography-root MuiTypography-h6"
    >
      持有逻辑(至少3条)
    </h4>
    <div
      class="MuiBox-root MuiBox-root-10"
    >
      <div>
        ListControl
      </div>
    </div>
  </div>
  <ul
    class="MuiList-root MuiList-padding"
  >
    <li
      class="MuiListItem-root MuiListItem-dense"
    >
      <div>
        input 1
      </div>
      <button
        class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-7 MuiIconButton-colorSecondary"
        id="remove-0"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10H7v-2h10v2z"
            />
          </svg>
        </span>
      </button>
    </li>
    <li
      class="MuiListItem-root MuiListItem-dense"
    >
      <div>
        input 2
      </div>
      <button
        class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-7 MuiIconButton-colorSecondary"
        id="remove-1"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10H7v-2h10v2z"
            />
          </svg>
        </span>
      </button>
    </li>
  </ul>
</div>
`;

exports[`ReasonSection renders the section without any inputs 1`] = `
<div
  class="MuiBox-root MuiBox-root-1"
>
  <div
    class="MuiBox-root MuiBox-root-2"
  >
    <h4
      class="MuiTypography-root MuiTypography-h6"
    >
      持有逻辑(至少3条)
    </h4>
    <div
      class="MuiBox-root MuiBox-root-3"
    >
      <div>
        ListControl
      </div>
    </div>
  </div>
  <ul
    class="MuiList-root MuiList-padding"
  />
</div>
`;
